[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/default_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/icons/mask_shader.tres" type="Material" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scenes/additional/player_card.gd" type="Script" id=4]


[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_left = -0.0500407
anchor_top = -0.174862
anchor_right = 0.049
margin_left = 1.24169
margin_top = 3.91709
margin_right = -0.175682
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ControlSize" type="Control" parent="."]
anchor_left = 0.14695
anchor_top = 0.00167915
anchor_right = 0.87695
anchor_bottom = 0.91257
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Icon" type="TextureRect" parent="ControlSize"]
material = ExtResource( 2 )
anchor_top = 0.081
anchor_right = 0.98
anchor_bottom = 0.827
margin_left = -0.957001
margin_top = -0.0257382
margin_right = -0.0031662
margin_bottom = 0.0449982
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labAnswerStatus" type="Label" parent="ControlSize"]
visible = false
anchor_left = -0.0867058
anchor_top = 0.220489
anchor_right = 0.0913764
anchor_bottom = 0.67701
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labConnected" type="Label" parent="ControlSize"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.671233
anchor_top = 0.456522
anchor_right = 1.0411
anchor_bottom = 0.913043
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "C!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NickLabel" type="Label" parent="ControlSize"]
anchor_left = -0.416044
anchor_top = 0.782609
anchor_right = 1.37848
anchor_bottom = 1.08696
margin_right = 7.62939e-06
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.411765, 0.411765, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": true
}
